--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
 language: go
-os:
-  - linux
-  - osx
-  - windows
-  - freebsd
 go:
   - 1.5
   - 1.6
   - tip
   - 1.7beta6
-install:
-  - go get ./...
-  
+script:
+ - go test -v ./...
