--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
 language: go
+
 os:
   - osx
   - linux
   - windows
+
 go:
   - tip
+
+before_install:
+  - go get -t -v ./...
+
 script:
- - go test
+ - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
